Resolves: fdo#73936 make FormFieldDropDowns a real fieldportion

split the checkbox and list and use a field portion for the list.
That way it knows how to line break correctly wrt hardspaces and doesn't hang
when the situation arises.

Change-Id: I46d73f19ef8e51e7c21c8783ce70bb80d98a784c